2006-08-04  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/paper-column.cc (set_system): new function.

	* lily/spacing-engraver.cc (stop_translation_timestep): store
	SpacingSpanner refs in Paper_column.

	* lily/spacing-loose-columns.cc (set_loose_columns): rewrite
	compute loose clique spacing using GraceSpacing/SpacingSpanner.

2006-08-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/beam-engraver.cc (listen_beam): add method for
	Grace_beam_engraver too.

2006-08-03  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* python/convertrules.py: Fix indentation bug that broke
	conversion of files older than 1.3.117.
	Fix escape error in the description for 2.9.6.

2006-08-02  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/*-engraver.cc: convert all try_music functions in
	*-engraver.cc. (Patch by Erik S.; please elaborate)

	* input/test/instrument-name-align.ly: update version.

2006-08-02  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/lilypond-book.itely (Invoking lilypond-book):
	Doc the --pdf flag to lilypond-book.

2006-07-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/topdocs/NEWS.tely (Top): add description.

	* input/regression/tuplet-full-length-note.ly: add file.

	* lily/instrument-name-engraver.cc (acknowledge_axis_group):
	always store axis group.

2006-07-27  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* input/regression/instrument-switch.ly: new file.

	* lily/instrument-switch-engraver.cc (process_music): new file.

	* ly/engraver-init.ly: add Instrument_switch_engraver

	* ly/music-functions-init.ly: \instrumentSwitch

	* scm/define-context-properties.scm
	(all-user-translation-properties): add instrumentCueName

	* scm/define-grobs.scm (all-grob-descriptions): add InstrumentSwitch

2006-07-26  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* ly/music-functions-init.ly: music function \transposition.

	* lily/parser.yy (command_element): softcode \transposition.
